<resources>
    <string name="app_name">Pomodoro Clock</string>
    <string name="action_settings">Settings</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Reset">Reset</string>
    <string name="Stop">Stop</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="banner_ad_unit_id">ca-app-pub-2071539911441808/9970831179</string>
    <string name="timerVal">00:00</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_info">infoActivity</string>
    <string name="about">About</string>
    <string name="About_me">
        I am an Up and Coming Android developer this is my first app. I am a self taught developer and have taught myself Android App
        development and Java. \n\n
        You can visit my projects at my
        <a href="https://github.com/adityabharadwaj26"> GitHub
        </a>
        Profile. \n
    </string>
    <string name="link">
        <a href="https://github.com/adityabharadwaj26"> GitHub </a>
    </string>
    <string name="label">MM:SS</string>
    <string name="IntroQuestion">What Is Pomodoro Technique?</string>
    <string name="Dismiss">Dismiss</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Intro1">
        The Pomodoro Technique is a time management method developed by Francesco Cirillo in the late 1980s.
        The technique uses a timer to break down work into intervals, traditionally 25 minutes in length, separated by short breaks.
        These intervals are named pomodoros, the plural in English of the Italian word pomodoro (tomato),
        after the tomato-shaped kitchen timer that Cirillo used as a university student. The method is based on the idea that
        frequent breaks can improve mental agility.\n
        \n
        There are six stages in the technique:\n
        1. Decide on the task to be done.\n
        2. Set the pomodoro timer (traditionally to 25 minutes).\n
        3. Work on the task until the timer rings. If a distraction pops into your head, write it down, but immediately get back on task.\n
        4. After the timer rings, put a checkmark on a piece of paper.\n
        5. If you have fewer than four checkmarks, take a short break (3–5 minutes), then go to step 1.\n
        6. Else (i.e. after four pomodoros) take a longer break (15–30 minutes), reset your checkmark count to zero, then go to step 1.\n
    </string>
</resources>
