<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    tools:context="in.blogspot.understandingthecode.pomodoroclock.Intro"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/IntroQuestion"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:isScrollContainer="true"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_gravity="top"
        android:id="@+id/textView2"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:fillViewport="true">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Intro1"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:isScrollContainer="true"
            android:padding="20dp"
            android:layout_gravity="top"
            android:id="@+id/textView1"
        />
    </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/Dismiss"

            android:textSize="20sp"
            android:text="@string/Dismiss" />
</LinearLayout>
